BUG-16991 No GC log for NameNode on Windows (cherry picked from commit d475dbb0b9c84e270c50f2d25b482b3d743a9eab)