@@ -271,9 +271,16 @@ function Main( $scriptDir )
     }
 
     ###
+    ### Modifying hadoop-env.cmd to support Namenode GC
+    ###
+    Write-Log "Modifying hadoop-env.cmd to support Namenode GC"
+    $file =  "$hadoopInstallDir\etc\hadoop\hadoop-env.cmd"
+    $line = "`nset HADOOP_NAMENODE_OPTS==-Xloggc:%HADOOP_LOG_DIR%/gc-namenode.log -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps %HADOOP_NAMENODE_OPTS%"
+    Add-Content $file $line
+    
+    ###
     ### Install and Configure HDFS
     ###
-
     Install "Hdfs" $NodeInstallRoot $serviceCredential $hdfsRoles
 
     $replicationfactor = if ($ENV:SLAVE_HOSTS.Split(",").Length -gt 2) { "3" } else { "1" }
